--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -4,9 +4,11 @@
     <a routerLink="/adauga" routerLinkActive="active-link" style="color: white; text-decoration: none; font-size: 18px; font-weight: bold; margin-right: 20px;">
       ➕ Adaugă Captură
     </a>
-    
+    <a routerLink="/istoric" routerLinkActive="active-link" style="color: white; text-decoration: none; font-size: 18px; font-weight: bold; margin-right: 20px;">
+      📜 Istoric
+    </a>
     </div>
-
+    
   <button (click)="logout()" style="background-color: #e74c3c; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer; font-weight: bold;">
     Ieșire Cont 🚪
   </button>
