--- a/client/src/app/components/profil/profil.html
+++ b/client/src/app/components/profil/profil.html
@@ -4,8 +4,9 @@
 
 <p>
   Nivel de experiență:
-  <strong>{{ profile.experience_level }}</strong>
+  <strong>{{ experienceLevel }}</strong>
 </p>
+
 
 <hr>
 
