--- a/client/src/app/components/add-catch/add-catch.html
+++ b/client/src/app/components/add-catch/add-catch.html
@@ -1,3 +1,4 @@
+<div class="page-wrapper"><div class="glass-card">
 <div class="add-catch-container">
   <h2>Adaugă o Captură Nouă</h2>
 
@@ -43,3 +44,4 @@
 
   <button (click)="onSubmit()" class="btn-save">Salvează Captura</button>
 </div>
+</div></div>
