--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,16 +1,19 @@
 <nav *ngIf="showMenu" style="background: #2c3e50; padding: 1rem; margin-bottom: 20px; display: flex; justify-content: space-between; align-items: center;">
   
   <div>
+    <a routerLink="/feed" routerLinkActive="active-link" style="color: white; text-decoration: none; font-size: 18px; font-weight: bold; margin-right: 20px;">
+       🌍 Feed
+    </a>
     <a routerLink="/profil" routerLinkActive="active-link" style="color: white; text-decoration: none; font-size: 18px; font-weight: bold; margin-right: 20px;">
-      👤 Profil
+       👤 Profil
     </a>
     <a routerLink="/adauga" routerLinkActive="active-link" style="color: white; text-decoration: none; font-size: 18px; font-weight: bold; margin-right: 20px;">
-      ➕ Adaugă Captură
+       ➕ Adaugă Captură
     </a>
     <a routerLink="/istoric" routerLinkActive="active-link" style="color: white; text-decoration: none; font-size: 18px; font-weight: bold; margin-right: 20px;">
-      📜 Istoric
+       📜 Istoric
     </a>
-    </div>
+  </div>
     
   <button (click)="logout()" style="background-color: #e74c3c; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer; font-weight: bold;">
     Ieșire Cont 🚪
